# LDL

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Sample.cpp  TestAll.cpp  Tests.bat  Tests_x64.bat  Tests_x86.bat  clang32.bat  dependencies_download.bat  license.txt  linux_shared.sh  linux_static.sh  main.cpp  min mingw_c++98.bat  mingw32.bat  mingw64.bat  mingw_c++03.bat  mingw_c++11.bat  mingw_c++14.bat  mingw_c++17.bat  mingw_c++98.bat  msvc32.bat  msvc64.bat  test.cpp  windows_shared.bat  windows_static.bat
ArcanumWorld/: CMakeLists.txt
ArcanumWorld/source/: ArcanumWorld.cpp
Examples/Graphics/: 01_WindowAndRender.cpp  02_Color.cpp  03_Line.cpp  04_Rect.cpp  05_Texture.cpp  06_Click.cpp  07_Motion.cpp  08_Surface.cpp  09_ColorKey.cpp  10_TileMap.cpp  11_Resize.cpp  12_TileMap2.cpp  13_TileMapBatcher.cpp  14_TextureCopy.cpp  15_AudioPlay.cpp  16_TextRasterizer.cpp  CMakeLists.txt
Examples/LDLC/: CMakeLists.txt  LDLC_01_WindowAndRender.c  LDLC_02_Color.c  LDLC_03_Line.c  LDLC_04_Rect.c  LDLC_05_Texture.c
Examples/LDLCpp/: 01_WindowAndRender.cpp  02_Color.cpp  03_Line.cpp  04_Rect.cpp  05_Texture.cpp  06_Click.cpp  07_Motion.cpp  08_Surface.cpp  09_ColorKey.cpp  10_TileMap.cpp  11_Resize.cpp  12_TileMap2.cpp  12_TileMapRandom.cpp  13_TileMapBatcher.cpp  13_TileMapRandomBatcher.cpp  14_TextureCopy.cpp  15_AudioPlay.cpp  16_TextRasterizer.cpp  CMakeLists.txt
Examples/NeheOpenGL/: CMakeLists.txt  Lesson01.cpp  Lesson02.cpp  Lesson03.cpp  Lesson04.cpp  Lesson05.cpp  Lesson06.cpp  Lesson07.cpp  Lesson08.cpp  Lesson09.cpp  Lesson10.cpp  Lesson11.cpp  Lesson12.cpp  Lesson16.cpp  NeheOpenGL.hpp
Examples/OpenGL1/: CMakeLists.txt  Figures.cpp  Primitive.cpp  Sierpinski2D.cpp  Sierpinski3D.cpp  Tetrahedron.cpp  Torus.cpp  Triangle.cpp
Examples/VictorGordan/: 01_CreateWindow.cpp  02_Triangle.cpp  03_Indices.cpp  04_Organizing.cpp  05_Shaders.cpp  06_Textures.cpp  07_Going3D.cpp  08_Camera.cpp  09_Lighting.cpp  CMakeLists.txt
Games/Arcanum/: CMakeLists.txt  Tests_x86.bat  main.cpp
Tutorials/NeHe/: 01_SettingUpAnOpenGLWindow.cpp  02_YourFirstPolygon.cpp  03_AddingColor.cpp  04_Rotation.cpp  05_3DShapes.cpp  06_TextureMapping.cpp  CMakeLists.txt
Tutorials/OpenGL_SuperBible/: CMakeLists.txt  Chapter_2_Bounce.cpp  Chapter_2_GLRect.cpp  Chapter_3_Linesw.cpp  Chapter_3_Lstipple.cpp
Tutorials/Ravesli/: 03_Window.cpp  04_Triangle.cpp  05_Shaders.cpp  06_Textures.cpp  07_Transformations.cpp  08_CoordinateSystems.cpp  09_Camera.cpp  10_Colors.cpp  11_BasicLighting.cpp  CMakeLists.txt  camera.h  shader_s.h
Tutorials/VictorGordan/: CMakeLists.txt
cmake/linux/: CMakeLists.txt
cmake/windows/: CMakeLists.txt
cmake_old/: CMakeLists.txt
demos/ArcanumWorld/: CMakeLists.txt  Config.xml
examples/: 01Window.cpp  02Render.cpp  03Fps.cpp  04Clear.cpp  05Img.cpp  CMakeLists.txt
examples/BeginEnd/: 01_FirstProgram.cpp  02_PointLineTriangleCircle.cpp  04_WeWriteMinesweeperGame.cpp  CMakeLists.txt
examples/DOS/: 04Clear.cpp  CMakeLists.txt
examples/GLAUX/: BEZMESH.C  BEZSURF.C  CMakeLists.txt  FONT.C  glxHello.c  glxTrngl.c
examples/GLFW3/: CMakeLists.txt  glfw3Hello.c
examples/GLUT/: CMakeLists.txt  GLUT_HelloWorld.c  gltHello.c
examples/LDLCpp/: 05_Surface.cpp  06_Texture.cpp  07_TileMapRandom.cpp
examples/Lessons/: 01Window.cpp  01_WindowAndRender.cpp  02Render.cpp  02_Color.cpp  03Fps.cpp  03_Line.cpp  04Clear.cpp  04_Rect.cpp  05Img.cpp  05_Surface.cpp  06Surf.cpp  06_Texture.cpp  07Move.cpp  07_TileMapRandom.cpp  08_Memory.cpp  09_Software.cpp  CMakeLists.txt
examples/OpenGL1/: 01_GL1_ScreenColor.cpp  CMakeLists.txt  Figures.cpp  Primitive.cpp  Sierpinski2D.cpp  Tetrahedron.cpp  Triangle.cpp
examples/OpenGL3/: 01_GL3_Triangle.cpp  CMakeLists.txt
examples/SDL1/: CMakeLists.txt  SDL1_01_Window.c  SDL1_02_LoadBmp.c  SDL1_03_ColorScreen.c  SDL1_04_Image.c  SDL1_HelloWorld.c
examples/SDL2/: CMakeLists.txt  SDL2_01_Window.c
examples/SDL3/: CMakeLists.txt  SDL3_01_Window.c  SDL3_01_Window.cpp  SDL3_02_Renderer.c  SDL3_02_Renderer.cpp  SDL3_03_Clear.c  SDL3_03_Clear.cpp  SDL3_04_Surface.c  SDL3_04_Surface.cpp  SDL3_05_Texture.c
examples/cpp/: cpp01.cpp  cpp02.cpp  cpp03.cpp  cpp04.cpp
examples/cpp98/: cpp98_01.cpp
source/: Alpha.cpp  BaseRndr.cpp  BmpLoad.cpp  ByteRead.cpp  CMakeLists.txt  Color.cpp  Conv.cpp  Conv.hpp  Events.cpp  FpsCount.cpp  FpsCount.hpp  Funcs.cpp  Palette.cpp  Result.cpp  Result.hpp  Surface.cpp  Test.cpp
source/Allocators/: FixedLinear.cpp  SmallAllocator.cpp
source/Audio/: AudioContext.cpp  Mixer.cpp  Sound.cpp
source/Core/: Directory.cpp  FastPimpl.cpp  FileInfo.cpp  IntegerToString.cpp  Library.cpp  NumberToString.cpp  RuntimeError.cpp  TestEqual.cpp
source/Creators/: CoreCreator.cpp  GraphicsCreator.cpp
source/DirectX/: DirectX9.cpp  DirectX9.hpp
source/Dos/: Creators.cpp  RContext.hpp  Render.cpp  Render.hpp  SoftRend.cpp  SoftRend.hpp  SoftWin.cpp  SoftWin.hpp  Ticks.cpp  Window.cpp  Window.hpp
source/Events/: Eventer.cpp
source/GLU/: mipmap.cpp  project.cpp  quad.cpp
source/Graphics/: BaseRender.cpp  BaseWindow.cpp  Camera.cpp  CameraImpl.hpp  Color.cpp  CpuImage.cpp  CpuRender.cpp  Functions.cpp  GL1Rend.cpp  GL1Rend.hpp  GL1Render.cpp  GpuImage.cpp  GpuRender.cpp  GpuWindow.cpp  Image.cpp  ImageResizer.cpp  ImageWritter.cpp  Isometric.cpp  PixelConverter.cpp  Render.cpp  RenderContext.cpp  RenderContextImpl.hpp  RenderImpl.hpp  Screenshoter.cpp  ScreenshoterImpl.hpp  SoftRend.cpp  SoftRend.hpp  Surface.cpp  TextRasterizer.cpp  Texture.cpp  TextureBatcher.cpp  TextureBatcherImpl.hpp  TextureImpl.hpp  VideoMode.cpp  Window.cpp
source/LDL/: Assert.cpp  BaseRndr.hpp  BaseWin.cpp  BaseWin.hpp  Batcher.cpp  Context.cpp  Eventer.hpp  Format.cpp  KeyMap.hpp  Mapping.cpp  Mapping.hpp  MemMngr.cpp  PixConv.cpp  Render.cpp  Result.cpp  StdFuncs.cpp  Stream.cpp  TexSizer.hpp  Texture.cpp  UtfConv.cpp  Video.cpp  Window.cpp
source/LDLC/: LDL_FixedLinear.cpp  LDL_FpsCounter.cpp  LDL_FpsLimiter.cpp  LDL_ImageLoader.cpp  LDL_Library.cpp  LDL_NumberToString.cpp  LDL_OpenGLLoader.cpp  (+5 more)
(+2844 files in other folders)
