
add_executable(01Window "01Window.cpp")
target_link_libraries(01Window ${libs})

add_executable(02Render "02Render.cpp")
target_link_libraries(02Render ${libs})

add_executable(03Fps "03Fps.cpp")
target_link_libraries(03Fps ${libs})

add_executable(04Clear "04Clear.cpp")
target_link_libraries(04Clear ${libs})
