add_executable(Lesson01 "Lesson01.cpp")

if (WIN32)
    target_link_libraries(Lesson01 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson01 LDL GLU)
endif() 

add_executable(Lesson02 "Lesson02.cpp")
if (WIN32)
    target_link_libraries(Lesson02 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson02 LDL GLU)
endif()

add_executable(Lesson03 "Lesson03.cpp")
if (WIN32)
    target_link_libraries(Lesson03 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson03 LDL GLU)
endif()

add_executable(Lesson04 "Lesson04.cpp")
if (WIN32)
    target_link_libraries(Lesson04 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson04 LDL GLU)
endif()

add_executable(Lesson05 "Lesson05.cpp")
if (WIN32)
    target_link_libraries(Lesson05 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson05 LDL GLU)
endif()

add_executable(Lesson06 "Lesson06.cpp")
if (WIN32)
    target_link_libraries(Lesson06 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson06 LDL GLU)
endif()

add_executable(Lesson07 "Lesson07.cpp")
if (WIN32)
    target_link_libraries(Lesson07 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson07 LDL GLU)
endif()

add_executable(Lesson08 "Lesson08.cpp")
if (WIN32)
    target_link_libraries(Lesson08 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson08 LDL GLU)
endif()

add_executable(Lesson09 "Lesson09.cpp")
if (WIN32)
    target_link_libraries(Lesson09 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson09 LDL GLU)
endif()

add_executable(Lesson10 "Lesson10.cpp")
if (WIN32)
    target_link_libraries(Lesson10 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson10 LDL GLU)
endif()

add_executable(Lesson11 "Lesson11.cpp")
if (WIN32)
    target_link_libraries(Lesson11 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson11 LDL GLU)
endif()

add_executable(Lesson12 "Lesson12.cpp")
if (WIN32)
    target_link_libraries(Lesson12 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson12 LDL GLU)
endif()

add_executable(Lesson16 "Lesson16.cpp")
if (WIN32)
    target_link_libraries(Lesson16 LDL glu32)
elseif(UNIX AND NOT APPLE)
    target_link_libraries(Lesson16 LDL GLU)
endif()