
add_executable(Lesson01 "Lesson01.cpp")
target_link_libraries(Lesson01 LDL)

add_executable(Lesson02 "Lesson02.cpp")
target_link_libraries(Lesson02 LDL)

add_executable(Lesson03 "Lesson03.cpp")
target_link_libraries(Lesson03 LDL)

add_executable(Lesson04 "Lesson04.cpp")
target_link_libraries(Lesson04 LDL)

add_executable(Lesson05 "Lesson05.cpp")
target_link_libraries(Lesson05 LDL)

add_executable(Lesson06 "Lesson06.cpp")
target_link_libraries(Lesson06 LDL)

add_executable(Lesson07 "Lesson07.cpp")
target_link_libraries(Lesson07 LDL)

add_executable(Lesson08 "Lesson08.cpp")
target_link_libraries(Lesson08 LDL)

add_executable(Lesson09 "Lesson09.cpp")
target_link_libraries(Lesson09 LDL)

add_executable(Lesson10 "Lesson10.cpp")
target_link_libraries(Lesson10 LDL)

add_executable(Lesson11 "Lesson11.cpp")
target_link_libraries(Lesson11 LDL)

add_executable(Lesson12 "Lesson12.cpp")
target_link_libraries(Lesson12 LDL)

add_executable(Lesson16 "Lesson16.cpp")
target_link_libraries(Lesson16 LDL)
