add_executable(Chapter_2_Simple "Chapter_2_Simple.cpp")
target_link_libraries(Chapter_2_Simple LDL)

add_executable(Chapter_2_GLRect "Chapter_2_GLRect.cpp")
target_link_libraries(Chapter_2_GLRect LDL)

add_executable(Chapter_2_Bounce "Chapter_2_Bounce.cpp")
target_link_libraries(Chapter_2_Bounce LDL)

add_executable(Chapter_3_Lines "Chapter_3_Lines.cpp")
target_link_libraries(Chapter_3_Lines LDL)

add_executable(Chapter_3_Linesw "Chapter_3_Linesw.cpp")
target_link_libraries(Chapter_3_Linesw LDL)

add_executable(Chapter_3_Lstipple "Chapter_3_Lstipple.cpp")
target_link_libraries(Chapter_3_Lstipple LDL)

add_executable(Chapter_3_LStrips "Chapter_3_LStrips.cpp")
target_link_libraries(Chapter_3_LStrips LDL)