add_executable(01Window "01Window.cpp")
target_link_libraries(01Window LDL)

add_executable(02Render "02Render.cpp")
target_link_libraries(02Render LDL)

add_executable(03Fps "03Fps.cpp")
target_link_libraries(03Fps LDL)

add_executable(04Clear "04Clear.cpp")
target_link_libraries(04Clear LDL)

add_executable(05Img "05Img.cpp")
target_link_libraries(05Img LDL)

add_executable(06Surf "06Surf.cpp")
target_link_libraries(06Surf LDL)
